# nix-ninja

./: flake.nix
crates/nix-ninja/: Cargo.toml
crates/nix-ninja-task/: Cargo.toml
crates/nix-ninja-task/src/: derived_file.rs  main.rs
crates/nix-ninja/src/: cli.rs  local.rs  task.rs
crates/nix-ninja/src/subtool/: dynamic_task.rs
crates/nix-varlink-client/: Cargo.toml
crates/nix-varlink-client/src/: lib.rs
modules/flake/: overlays.nix
modules/flake/pkgs/mkMesonPackage/: default.nix
modules/nixos/tests/: nix-build.nix
