[package]
name = "nix-varlink-client"
version.workspace = true
edition.workspace = true
description = "Client for the Nix derivation-builder Varlink IPC (NixOS/nix#13768)"
license = "MIT"

[dependencies]
anyhow = "1.0"
harmonia-store-core = { workspace = true }
nix = { version = "0.29", features = ["socket", "uio"] }
nix-nar = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
